# auto_watering_ws

./: .gitignore  README.md  frames.gv
src/: CMakeLists.txt
src/smart_robot/: CMakeLists.txt  package.xml
src/smart_robot/action/: MoveToPlant.action
src/smart_robot/config/: costmap_common.yaml  dwa_local_planner.yaml  ekf.yaml  global_costmap.yaml  local_costmap.yaml  nav.rviz  navigator_params.yaml  plant_locations.yaml
src/smart_robot/launch/: gmapping.launch  main.launch  spawn_robot.launch  test.launch
src/smart_robot/maps/: garden_map.pgm  garden_map.yaml
src/smart_robot/models/pot/: model.config  model.sdf
src/smart_robot/scripts/: manager_node.py  moisture_sensor_node.py  navigator_node.py  pump_driver_node.py
src/smart_robot/srv/: GetMoisture.srv
src/smart_robot/urdf/: smart_robot.urdf.xacro
src/smart_robot/worlds/: garden.world
src/smart_watering_robot/launch/: main.launch
src/smart_watering_robot/models/potted_plant/: model.config  model.sdf
src/smart_watering_robot/scripts/: navigator_node.py
src/smart_watering_robot/urdf/: custom_components.xacro  robot.gazebo.xacro  robot_base.xacro  smart_robot.urdf.xacro
